test_data/Xml/Unexpected/Unserializable/InvalidClassName/relationshipElement/wrong.xml.exception
Expected an element representing an instance of class RelationshipElement with element name relationshipElement, but got: utterlyInvalid at: the beginning